# design-generators

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TEMP_CI_MD_ONLY.md  codecov.yml  main.py  mkdocs.yml  pyproject.toml
lib/laygen/: README.md  pyproject.toml
lib/laygen/tests/: test_agents.py  test_common.py  test_common_tokenization.py  test_jaxtyping_runtime.py  test_nn.py  test_pipeline_base.py  test_readme_contracts.py  test_schedulers_continuous.py  test_typing_aliases.py  test_visualization.py
lib/traingen/: README.md  pyproject.toml
lib/traingen-parity/: README.md  pyproject.toml
lib/traingen-parity/tests/: test_parity.py
lib/traingen/tests/: test_lightning_cli.py  test_lightning_hooks.py  test_parity.py
models/cgb-dm/: README.md  REPRODUCING.md  TRAINING.md  pyproject.toml
models/cgb-dm/scripts/: convert_training_checkpoint.py  download_original_assets.py  evaluate_full_run.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/cgb-dm/tests/: test_configs_and_scripts_cgb_dm.py  test_configuration_cgb_dm.py  test_conversion_cgb_dm.py  test_data_cgb_dm.py  test_modeling_cgb_dm.py  test_pipeline_cgb_dm.py  test_processing_cgb_dm.py  test_scheduler_cgb_dm.py  test_training_cgb_dm.py
models/common/: pyproject.toml
models/common/tests/: test_common.py
models/const-layout/: pyproject.toml
models/const-layout/scripts/: convert_original_checkpoint.py  download_original_weights.py  generate_reference.py
models/const-layout/tests/: test_conversion_const_layout.py  test_modeling_const_layout.py  test_pipeline_const_layout.py  test_processing_const_layout.py
models/dlt/: README.md  REPRODUCING.md  TRAINING.md  pyproject.toml
models/dlt/scripts/: convert_original_checkpoint.py  generate_vendor_reference.py  smoke_from_pretrained.py
models/dlt/tests/: test_dlt_conversion.py  test_dlt_modeling.py  test_dlt_pipeline.py  test_dlt_processor.py  test_dlt_scheduler.py  test_dlt_training.py
models/ds-gan/: README.md  REPRODUCING.md  pyproject.toml
models/ds-gan/scripts/: convert_original_checkpoint.py  download_original.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/ds-gan/tests/: test_configuration_ds_gan.py  test_conversion_ds_gan.py  test_model_card_ds_gan.py  test_modeling_ds_gan.py  test_pipeline_ds_gan.py  test_processing_ds_gan.py  test_readme_ds_gan.py
models/flex-dm/: README.md  REPRODUCING.md  pyproject.toml
models/flex-dm/scripts/: convert_original_checkpoint.py  download_original_assets.py  generate_reference_outputs.py  inspect_tf_checkpoint.py  probe_layer_parity.py  smoke_from_pretrained.py
models/flex-dm/tests/: test_config.py  test_conversion.py  test_data_specs.py  test_jaxtyping_runtime.py  test_masking.py  test_modeling.py  test_pipeline.py  test_processing.py  test_tf_checkpoint.py
models/housegan/: README.md  REPRODUCING.md  pyproject.toml
models/housegan/scripts/: convert_original_checkpoint.py  download_original_assets.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/housegan/tests/: test_config.py  test_conversion.py  test_datasets_visualization.py  test_graph_schema.py  test_modeling.py  test_pipeline.py  test_processor.py
models/lace/: README.md  REPRODUCING.md  pyproject.toml
models/lace/scripts/: convert_checkpoint.py  download_vendor_assets.py  generate_reference.py  smoke_from_pretrained.py
models/lace/tests/: test_configuration_lace.py  test_constraints_lace.py  test_conversion.py  test_jaxtyping_runtime.py  test_modeling_lace.py  test_pipeline_lace.py  test_processing_lace.py  test_scheduling_lace.py
models/layousyn/: README.md  REPRODUCING.md  pyproject.toml
models/layousyn/scripts/: convert_checkpoint.py  download_original.py  save_reference_outputs.py  smoke_from_pretrained.py
models/layousyn/tests/: test_config.py  test_conversion.py  test_jaxtyping_runtime.py  test_modeling.py  test_pipeline.py  test_processor.py  test_scheduler.py
models/layout-action/: README.md  REPRODUCING.md  pyproject.toml
models/layout-action/scripts/: convert_original_checkpoint.py  download_original_assets.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/layout-action/tests/: test_config.py  test_conversion.py  test_generation.py  test_modeling.py  test_pipeline.py  test_processor.py  test_tokenizer.py
models/layout-corrector/: README.md  REPRODUCING.md  pyproject.toml
models/layout-corrector/scripts/: convert_original_checkpoint.py  download_original.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/layout-corrector/tests/: test_config.py  test_conversion.py  test_corrector.py  test_docs.py  test_download_original.py  test_jaxtyping_runtime.py  test_model_card.py  test_pipeline.py  test_sampling.py
models/layout-detr/: README.md  REPRODUCING.md  pyproject.toml
models/layout-detr/scripts/: convert_original_checkpoint.py  download_original_assets.py  generate_reference_outputs.py  smoke_from_pretrained.py
models/layout-detr/tests/: test_configuration_layout_detr.py  test_conversion_layout_detr.py  test_datasets_layout_detr.py  test_image_processing_layout_detr.py  test_modeling_layout_detr.py  test_pipeline_layout_detr.py  (+3 more)
models/layout-dm/: README.md  REPRODUCING.md  pyproject.toml
models/layout-fid/: README.md  REPRODUCING.md  pyproject.toml
models/layout-flow/: README.md  REPRODUCING.md  TRAINING.md  pyproject.toml
models/layout-gpt/: README.md  REPRODUCING.md  pyproject.toml
models/layout-transformer/: README.md  REPRODUCING.md  pyproject.toml
models/layoutdiffusion/: README.md  REPRODUCING.md  pyproject.toml
models/layoutformerpp/: README.md  REPRODUCING.md  pyproject.toml
models/layoutprompter/: README.md  REPRODUCING.md  pyproject.toml
models/layoutvae/: README.md  REPRODUCING.md  pyproject.toml
models/parse-then-place/: README.md  REPRODUCING.md  pyproject.toml
models/postero/: README.md  REPRODUCING.md  pyproject.toml
models/ralf/: README.md  REPRODUCING.md  pyproject.toml
models/smarttext/: README.md  REPRODUCING.md  pyproject.toml
(+619 files in other folders)
