[project]
name = "design-generators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke Kitada" },
]
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers[torch,vision]>=5.0.0",
]

[project.optional-dependencies]
diffusion = [
    "diffusers[torch]>=0.36.0",
]
download = [
    "gdown>=6.1.0",
]
llm-agent = [
    "pydantic-ai>=2.7.0",
]
training = [
    "lightning>=2.0.0",
]

[dependency-groups]
dev = [
    "mkdocs-gen-files>=0.6.1",
    "pre-commit>=4.6.0",
    "pytest>=6.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.1.5",
    "ty>=0.0.10",
    "vulture>=2.16",
]
docs = [
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.31.0",
]

[tool.uv.workspace]
members = ["lib/*", "models/*"]

[tool.ruff.lint]
extend-select = ["ANN", "D"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["ANN", "D"]
"tests/*.py" = ["D"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
markers = [
    "integration: tests that require external downloads or heavyweight runtime setup",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "tests/**/*",
    "scripts/*",
    "scripts/**/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.vulture]
min_confidence = 70
sort_by_size = true
paths = ["main.py"]
verbose = true
