[project]
name = "design-generators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke Kitada" },
]
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "coarse-to-fine",
    "ds-gan",
    "layout-corrector",
    "layoutdiffusion",
    "layout-flow",
    "layout-gpt",
    "layout-transformer",
    "layout-action",
    "lace",
    "layoutganpp",
    "layout-dm",
    "layoutprompter",
    "layousyn",
    "laygen",
    "layoutformerpp",
    "parse-then-place",
    "posgen",
    "ralf",
    "smarttext",
    "transformers[torch,vision]>=5.0.0",
]

[project.optional-dependencies]
diffusion = [
    "diffusers[torch]>=0.36.0",
]
download = [
    "gdown>=6.1.0",
]
llm-agent = [
    "pydantic-ai>=2.7.0",
]
training = [
    "lightning>=2.0.0",
]

[dependency-groups]
dev = [
    "beartype>=0.22.9,<0.23",
    "pre-commit>=4.6.0",
    "pylint>=4.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.1.5",
    "ty>=0.0.10",
    "vulture>=2.16",
]
docs = [
    "mkdocstrings[python]>=0.31.0",
    "zensical>=0.0.50,<0.1",
]

[tool.uv.workspace]
members = ["lib/*", "models/*"]

[tool.uv.sources]
coarse-to-fine = { workspace = true }
ds-gan = { workspace = true }
layout-corrector = { workspace = true }
layoutdiffusion = { workspace = true }
layout-flow = { workspace = true }
layout-gpt = { workspace = true }
layout-transformer = { workspace = true }
layout-action = { workspace = true }
lace = { workspace = true }
layoutganpp = { workspace = true }
layout-dm = { workspace = true }
layoutprompter = { workspace = true }
layousyn = { workspace = true }
laygen = { workspace = true }
layoutformerpp = { workspace = true }
parse-then-place = { workspace = true }
posgen = { workspace = true }
ralf = { workspace = true }
smarttext = { workspace = true }

[tool.ruff]
exclude = ["vendor"]
extend-exclude = ["vendor"]

[tool.ruff.lint]
extend-select = ["ANN", "D", "TID251"]
# jaxtyping shape strings are intentionally not Python names or expressions inside
# quoted annotations. Ruff/Pyflakes F722 and F821 are structurally incompatible
# with this syntax; globally ignoring them is the ecosystem-standard workaround.
ignore = ["F722", "F821"]

[tool.ruff.lint.per-file-ignores]
"lib/*/tests/*.py" = ["ANN", "D"]
"lib/*/tests/**/*.py" = ["ANN", "D"]
"models/*/scripts/**/*.py" = ["ANN", "D"]
"models/*/tests/*.py" = ["ANN", "D"]
"models/*/tests/**/*.py" = ["ANN", "D"]
"scripts/**/*.py" = ["ANN", "D"]
"tests/*.py" = ["D"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any".msg = "Use precise types; justify exceptions with noqa + reason"

[tool.ty.rules]
all = "error"
missing-override-decorator = "ignore"
unsupported-base = "ignore"
unresolved-import = "ignore"

[tool.ty.src]
exclude = ["vendor"]

[tool.pylint.main]
ignore = ["vendor", ".cache", "site"]

[tool.pylint.messages_control]
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8

[tool.pytest.ini_options]
testpaths = ["tests", "lib", "models"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: tests that require external downloads or heavyweight runtime setup",
    "vendor_parity: requires original model weights and vendor dependencies",
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "tests/**/*",
    "scripts/*",
    "scripts/**/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.vulture]
min_confidence = 70
sort_by_size = true
paths = ["lib", "models", "scripts"]
verbose = false
