[project]
name = "laygen"
version = "0.1.0"
description = "Shared layout generation schemas and utilities."
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.36.0",
    "einops>=0.8",
    "huggingface-hub>=0.24",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "torch>=2.1",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
agents = [
    "pydantic-ai>=2.7.0",
]
diffusers = [
    "diffusers[torch]>=0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
]
