[project]
name = "laygen"
version = "0.1.0"
description = "Shared layout generation schemas and utilities."
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8",
    "huggingface-hub>=0.24",
    "jaxtyping>=0.3.11,<0.4",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
agents = [
    "pydantic-ai>=2.7.0",
]
diffusion = [
    "diffusers[torch]>=0.36.0",
    "torch>=2.1",
]
torch = [
    "torch>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
]
