[project]
name = "traingen-parity"
version = "0.1.0"
description = "Training parity helpers for generator packages."
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3.11,<0.4",
    "numpy>=1.24",
    "torch>=2.1",
]

[project.optional-dependencies]
lightning = [
    "traingen[lightning]",
]

[tool.uv.sources]
traingen = { workspace = true }
