[project]
name = "layout-generation-common"
version = "0.1.0"
description = "Shared layout generation schemas and utilities."
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.36.0",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "torch>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
]
