[project]
name = "const-layout"
version = "0.1.0"
description = "Transformers-style LayoutGAN++ conversion package."
requires-python = ">=3.11"
dependencies = [
    "layout-generation-common",
    "numpy>=1.24",
    "pillow>=10.0.0",
    "torch>=2.1",
    "transformers[torch]>=5.0.0",
]

[project.optional-dependencies]
download = [
    "requests>=2.31",
]
hub = [
    "huggingface-hub>=1.0.0",
]
vendor = [
    "cma",
    "pycocotools",
    "pytorch-fid",
    "scipy>=1.7",
    "seaborn",
    "tensorboard",
    "torch-geometric>=2.5,<2.7",
]

[tool.uv.sources]
layout-generation-common = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "vendor_parity: requires original LayoutGAN++ weights and vendor dependencies",
]
