[project]
name = "flex-dm"
version = "0.1.0"
description = "Transformers-style Flex-DM masked document modeling package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8",
    "huggingface-hub>=0.24",
    "laygen",
    "numpy>=1.24",
    "posgen",
    "safetensors>=0.4",
    "torch>=2.1",
    "transformers[torch]>=5.0.0",
]

[project.optional-dependencies]
data = ["datasets>=2.20"]
convert = ["tensorflow-cpu==2.15.1", "pyyaml>=6", "fsspec>=2024.6"]
vendor-tf = [
    "tensorflow[and-cuda]==2.15.1",
    "tensorflow-probability==0.23.0",
    "omegaconf",
    "dacite",
    "fsspec",
    "httplib2==0.19.0",
    "pyyaml",
    "selenium",
    "tinycss",
    "tqdm",
]

[tool.uv.sources]
laygen = { workspace = true }
posgen = { workspace = true }

[tool.design-generators]
framework = "transformers"
task = ["content-agnostic-layout-generation", "content-aware-layout-generation"]
conditions = ["completion", "refinement", "content_image"]
datasets = ["crello", "rico25"]
vendor = "CyberAgentAILab/flex-dm"
paper = "https://arxiv.org/abs/2303.18248"

[tool.pytest.ini_options]
markers = [
    "vendor_parity: requires original TensorFlow environment, downloaded assets, and generated goldens",
    "integration: may touch external datasets or large local caches",
]

[tool.ty.src]
exclude = ["scripts", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
