[project]
name = "housegan"
version = "0.1.0"
description = "Transformers-style House-GAN conversion package."
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.24",
    "jaxtyping>=0.3",
    "laygen",
    "numpy>=1.24",
    "pillow>=10",
    "safetensors>=0.4",
    "torch>=2.1",
    "transformers[torch]>=5.0.0",
]

[project.optional-dependencies]
download = [
    "requests>=2.31",
]
vendor = [
    "matplotlib",
    "networkx==2.4",
    "opencv-python",
    "pygraphviz",
    "scikit-image",
    "scipy",
    "svgwrite",
    "torchvision",
    "webcolors",
]

[tool.design-generators]
framework = "transformers"
task = "content-agnostic-layout-generation"
conditions = ["relation"]
datasets = ["housegan-floorplan-vectorized"]

[tool.uv.sources]
laygen = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "vendor_parity: requires original House-GAN weights, Dropbox assets, and vendor dependencies",
]
