[project]
name = "layousyn"
version = "0.1.0"
description = "Diffusers-style LayouSyn / Lay-Your-Scene layout generation package."
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.36.0",
    "huggingface-hub>=0.24",
    "laygen",
    "numpy>=1.24",
    "sentence-transformers>=3.0",
    "torch>=2.1",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
vendor = [
    "comet-ml",
    "gdown>=6.1.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "pandas",
    "pillow",
    "pyarrow",
    "pycocotools",
    "pytorch-fid",
    "tensorboard",
]

[tool.uv.sources]
laygen = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "vendor_parity: requires original LayouSyn weights, embeddings, and vendor dependencies",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
