[project]
name = "layout-gpt"
version = "0.1.0"
description = "Provider-agnostic Pydantic AI agent for LayoutGPT."
requires-python = ">=3.11"
dependencies = [
    "layout-generation-common",
    "pydantic>=2.0.0",
    "pydantic-ai>=2.7.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
vendor = [
    "cssutils>=2.9.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
layout-generation-common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
