[project]
name = "layout-gpt"
version = "0.1.0"
description = "Provider-agnostic Pydantic AI agent for LayoutGPT."
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3",
    "laygen[agents]",
    "pydantic>=2.0.0",
    "pydantic-ai>=2.7.0",
    "torch>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
vendor = [
    "cssutils>=2.9.0",
    "numpy>=1.26.0",
]

[tool.design-generators]
framework = "pydantic-ai"
task = "content-agnostic-layout-generation"
conditions = ["text", "unconditional"]
datasets = ["nsr-1k"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vendor_parity: deterministic checks that execute read-only vendor code",
]
