[project]
name = "layoutformerpp"
version = "0.1.0"
description = "Transformers-style LayoutFormer++ conversion package."
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.24",
    "jaxtyping>=0.3",
    "laygen",
    "numpy>=1.24",
    "safetensors>=0.4",
    "torch>=2.1",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
download = [
    "huggingface-hub>=0.24",
]
vendor = [
    "pycocotools>=2.0",
    "pytorch-fid>=0.3",
    "torchvision",
    "wandb",
]

[tool.uv.sources]
laygen = { workspace = true }

[tool.design-generators]
framework = "transformers"
task = "content-agnostic-layout-generation"
conditions = [
    "unconditional",
    "label",
    "label_size",
    "relation",
    "completion",
    "refinement",
]
datasets = ["rico25", "publaynet"]
