[project]
name = "layoutprompter"
version = "0.1.0"
description = "Pydantic AI implementation of LayoutPrompter."
requires-python = ">=3.11"
dependencies = [
    "layout-generation-common",
    "pydantic>=2.0.0",
    "pydantic-ai>=2.7.0",
    "torch>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
vendor = [
    "opencv-python>=4.0.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
