[project]
name = "parse-then-place"
version = "0.1.0"
description = "Transformers-style Parse-Then-Place conversion package."
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.24",
    "laygen",
    "lark>=1.1",
    "numpy>=1.24",
    "sentencepiece>=0.2",
    "torch>=2.1",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
download = [
    "huggingface-hub>=0.24",
]
vendor = [
    "PyYAML",
    "pytorch-fid>=0.3",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.1.5",
    "ty>=0.0.10",
]

[tool.uv.sources]
laygen = { workspace = true }
